deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: joshlong-authorization-api
  name: joshlong-authorization-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joshlong-authorization-api
  template:
    metadata:
      labels:
        app: joshlong-authorization-api
    spec:
      containers:
        - image: gcr.io/pgtm-jlong/joshlong-authorization-api
          imagePullPolicy: Always
          name: joshlong-authorization-api

          startupProbe:
            failureThreshold: 100
            periodSeconds: 10
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          readinessProbe:
            failureThreshold: 100
            periodSeconds: 10
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          livenessProbe:
            failureThreshold: 100
            periodSeconds: 10
            httpGet:
              port: 8080
              path: /actuator/health/liveness

          ports:
            - containerPort: 8080

          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "1Gi"
