deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # networking.gke.io/v1beta1.FrontendConfig: "joshlong-authorization-api-frontend-config"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "joshlong-authorization-api-certificate"
    kubernetes.io/ingress.global-static-ip-name: "developer-advocacy-joshlong-authorization-api-ip"
  name: joshlong-authorization-api-ingress
spec:
  defaultBackend:
    service:
      name: joshlong-authorization-api
      port:
        number: 80
